# f1-agent

./: .gitignore  README.md  final_test.py  integration_test.py  pyproject.toml  start_server.py  test_basic.py  test_fixes.py  test_improvements.py  test_keywords.py  test_routing.py
.github/: copilot-instructions.md
src/: main.py
src/agent/: __init__.py  agent.py  model_loader.py  remote_qwen_tool.py
src/infra/: vector_store.py
src/presentation/: cli_client.py
tests/: check_environment copy.py  check_versions copy 2.py  comprehensive_test.py  final_test.py  run_all_tests.py  start_server.py  test_demo.json  test_hf_inference copy.py  test_imports.py  test_memory copy.json  test_memory copy.py  test_recall.json  test_remote.json  test_request copy.json
